introductionに画像とテキストを追加

--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
                     <img src="img/IMG_8540.jpeg" width="200" height="200">
                 </div>
                 <div class="text-item-wrap">
-                    <h1>名前：富成 泰暉</h1>
+                    <ul>
+                        <li>名前 : 富成 泰暉(とみなり たいき)</li>
+                        <li>出身地 : 岐阜県</li>
+                        <li>経歴 : 高校を卒業後,航空機部品を取り扱う会社に就職、そこで検査員として４年間務める。働きながらプログラミングを独学で勉強、個人で何か案件を受けれないかと、探していると地元の美容師のかたに是非お願い！と言われホームページの作成を始め、それを実績に転職活動を開始する。</li>
+                        <li>趣味 : ファッション , スポーツ(主にバスケットボール) , </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -40,9 +45,21 @@
 <!-- 実績 -->
     <section class="performance">
         <div class="container">
-            <div class="section-title">実績紹介</div>
+            <div class="section-title" >実績紹介</div>
         </div>
-    </section>
+        <div class="introduction">
+            <div class="bono-img-wrap">
+                <img src="img/スクリーンショット 2020-08-12 13.01.28.png" class="bono-img">
+                <div class="color"></div>
+            </div>
+            <div class="introduction-text">
+                <h1>BONO hair</h1>
+                <p>使用言語 : HTML, CSS, JavaScript, jQuery<br>
+                   制作期間 : 3ヶ月<br>
+                   美容院の方と実際に話し合い作り上げました。</p>
+            </div>
+        </div>
+    </sectio
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
