実績紹介のレイアウト変更とtext追加

--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
 <body>
     <header>
         <div class="container">
-            <div class="header-menu">
-                <i class="fas fa-bars menu-icon"></i>
-            </div>
             <div class="header-title-wrap">
                 <div class="title-container">
                     <h1 class="header-title">Potfolio</h1>
@@ -44,22 +41,28 @@
     </section>
 <!-- 実績 -->
     <section class="performance">
-        <div class="container">
-            <div class="section-title" >実績紹介</div>
-        </div>
-        <div class="introduction">
-            <div class="bono-img-wrap">
-                <img src="img/スクリーンショット 2020-08-12 13.01.28.png" class="bono-img">
-                <div class="color"></div>
+            <div class="container">
+                <div class="section-title" >実績紹介</div>
+                
+                <div class="introduction">
+                    <div class="bono-imag">
+                        <a href="https://taikitominari.github.io/bono-hair/"><img class="img-btn" src="img/スクリーンショット 2020-08-12 13.01.28.png"></a>
+                    </div>
+                    <div class="introduction-text">
+                        <h2 class="text-title">作成物</h2>
+                        <p>美容院のHP(BONO hair)</p>
+                        <h2 class="text-title">使用言語</h2>
+                        <p>HTML, CSS, JavaScript, jQuery</p>
+                        <h2 class="text-title">制作期間</h2>
+                        <p>?ヶ月</p>
+                        <h2 class="text-title">詳細</h2>
+                        <p>サイトのデザインから作成、サーバーにアップするまでを
+                            美容院の方と実際に話し合い作り上げました。</p>
+                    </div>
+                </div>
             </div>
-            <div class="introduction-text">
-                <h1>BONO hair</h1>
-                <p>使用言語 : HTML, CSS, JavaScript, jQuery<br>
-                   制作期間 : 3ヶ月<br>
-                   美容院の方と実際に話し合い作り上げました。</p>
-            </div>
         </div>
-    </sectio
+    </section>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
