--- a/index.html
+++ b/index.html
@@ -8,25 +8,32 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-</head>
+</head> 
 <body>
     <header>
-        <div class="container">
-            <div class="header-title-wrap">
-                <div class="title-container">
-                    <h1 class="header-title">Potfolio</h1>
-                    <p class="name">Taiki Tominari</p>
-                </div>
+        <nav>
+            <ul class="header_list">
+                <li>人物紹介</li>
+                <li>実績紹介</li>
+                <li>プログラミングとの出会い</li>
+            </ul>
+        </nav>
+
+        <div class="title_wrapper">
+            <div class="title_container">
+                <h1 class="header_title">Potfolio</h1>
+                <p class="name">Taiki Tominari</p>
             </div>
         </div>
     </header>
-<!-- 自己紹介 -->
+    
+    <!-- 自己紹介 -->
     <section class="self-introduction">
         <div class="container">
             <div class="section-title">自己紹介</div>
-            <div class="s-ntroduction-wrap">
+            <div class="s-introduction-wrap">
                 <div class="image-item-wrap">
-                    <img src="img/IMG_8540.jpeg" width="200" height="200">
+                    <!-- <img src="img/IMG_8540.jpeg" width="200" height="200"> -->
                 </div>
                 <div class="text-item-wrap">
                     <ul>
@@ -39,7 +46,7 @@
             </div>
         </div>
     </section>
-<!-- 実績 -->
+    <!-- 実績 -->
     <section class="performance">
             <div class="container">
                 <div class="section-title" >実績紹介</div>
@@ -66,3 +73,5 @@
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
+
+
