制作物詳細ページ作成(bono-hair)など

--- a/bono-hair/bono.html
+++ b/bono-hair/bono.html
@@ -3,9 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="bono.css">
   <title>todoアプリ</title>
 </head>
 <body>
-  <h1>ムン知！</h1>
+  <header>
+    <nav>
+      <ul class="header_list">
+        <li><a href="../index.html#performance">実績紹介</a></li>
+        <li><a href="../index.html">TOPページ</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section class="bono_top">
+      <h1 class="top_title">制作物詳細 (BONO hairホームページ)</h1>
+      <div class="bono_item">
+        <div class="bono_details">
+          <ul>
+            <li>使用言語 : HTML / CSS / JavaScript (jQuery)</li>
+            <li>制作期間 : 5ヶ月(独自ドメインを取得しWeb上に公開が完了するまで)</li>
+          </ul>
+        </div>
+
+        <div class="bono_img-wrap">
+          <img class="bono_img" src="../img/スクリーンショット 2020-08-12 13.01.28.png" alt="BONO hairホームページの写真">
+        </div>
+
+      </div>
+    </section>
+  </main>
 </body>
 </html>
