--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </header>
 
   <main>
-    <section class="top ">
+    <section class="top">
       <h1 class="main-title">Portfolio</h1>
     </section>
 <!-- 自己紹介 -->
@@ -36,7 +36,7 @@
           </dl>
           <dl>
             <dt>経歴</dt>
-            <dd>高校を卒業後,航空機部品を取り扱う会社に就職、そこで検査員として４年間務める。働きながらプログラミングを独学で勉強、個人で何か案件を受けれないかと、探していると地元の美容師のかたに是非お願い！と言われホームページの作成を始め、それを実績に転職活動を開始する。</dd>
+            <dd>高校を卒業後,航空機部品を取り扱う会社に就職、そこで検査員として４年間務める。働きながらプログラミングを独学で勉強、</dd>
           </dl>
           <dl>
             <dt>趣味</dt>
@@ -59,9 +59,11 @@
         <div class="pm_item">
           <div class="pm_item_title">ToDOリスト</div>
           <img class="pm_img" src="img/スクリーンショット 2020-12-27 19.10.08.png">
-          <a class="pm_btn" href="todo/todo.html">制作物詳細</a>
+          <ul class="todo_details">
+            <li>使用言語 : HTML / CSS / JavaScript</li>
+            <li>制作期間 : １ヶ月</li>
+          </ul>
           <a class="pm_btn" href="https:///taikitominari.github.io/todoapp">デモページ</a>
-          <a class="pm_btn" href="https:///taikitominari.github.io/bono-hair">デモページ</a>
           <a class="pm_btn" href="https://github.com/taikitominari/todoapp">Git Hub</a>
         </div>
       </div>
