section(pg_myself)に追加

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
   <title>タイキPortfolio</title>
 </head>
 <body>
@@ -12,8 +13,8 @@
     <nav>
       <ul class="header_list">
         <li><a href="#introduction">自分紹介</a></li>
+        <li><a href="#pg_myself">スキルセット</a></li>
         <li><a href="#performance">実績一覧</a></li>
-        <li><a href="#pg_myself">プログラミングと私</a></li>
       </ul>
     </nav>
   </header>
@@ -36,12 +37,35 @@
           </dl>
           <dl>
             <dt>経歴</dt>
-            <dd>高校を卒業後,航空機部品を取り扱う会社に就職、そこで検査員として４年間務める。働きながらプログラミングを独学で勉強、</dd>
+            <dd>高校を卒業後,航空機部品を取り扱う会社に就職、そこで検査員として４年間務める。働きながらプログラミングを独学で勉強し転職活動を開始</dd>
           </dl>
           <dl>
             <dt>趣味</dt>
             <dd>ファッション , スポーツ(主にバスケットボール)</dd>
           </dl>
+        </div>
+      </div>
+    </section>
+
+    <section class="pg_myself" id="pg_myself">
+      <div class="pg_wrap">
+        <h2 class="title_name">スキルセット</h2>
+        <div class="pg_item_wrap">
+          <div class="skill_img_wrap">
+            <img class="skill_img" src="img/skill_image.png">
+          </div>
+          <div class="tool_wrap">
+            <dl>
+              <dt>その他のツール</dt>
+              <dd>・Git GitHub</dd>
+              <dd>・VScode</dd>
+            </dl>
+            <dl>
+              <dt>おまけ</dt>
+              <dd><a href="bonus.html">プログラミング学習のざっくり歴史</a></dd>
+              <dd><a a href="bonus.html">プログラミングとの出会い</a></dd>
+            </dl>
+          </div>
         </div>
       </div>
     </section>
@@ -67,10 +91,6 @@
           <a class="pm_btn" href="https://github.com/taikitominari/todoapp">Git Hub</a>
         </div>
       </div>
-
-    </section>
-    <section class="pg_myself" id="pg_myself">
-      <h2 class="title_name">プログラミング×私</h2>
     </section>
   </main>
 </body>
