bonohair,todoのQ&A Aテキスト追加

--- a/introduction/introduction.html
+++ b/introduction/introduction.html
@@ -84,7 +84,7 @@
           </div>
           <div class="a_wrap">
             <img src="img/my_icon.webp" class="user_img" alt="質問者">
-            <p class="a_text"><span class="a_logo">A:</span>HTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しました</p>
+            <p class="a_text"><span class="a_logo">A:</span>サイトの雰囲気がある程度決まり、さぁ制作開始、HTML,CSSで静的サイトまではスムーズにできたのですが、レスポンシブ対応や、jsは勉強を始めたばかりだったので調べて試してみてを繰り返し実装していきました。インプットでの知識を追うとアウトプットすることでより理解が深まりました。そしてHPに実際に実装できた時はとても嬉しく楽しい気持ちになったのを覚えています。サイトを公開して終わりではなく、決めたキーワードで検索順位を上げるためにSEOについても学習しました、Google search consoleなどのツールやコードを見直したりこの開発を通してインプットだけでは知らなかった知識や、わからないことを調べる力がついたと思います。</p>
           </div>
         </div>
   
@@ -131,7 +131,7 @@
           </div>
           <div class="a_wrap">
             <img src="img/my_icon.webp" class="user_img" alt="質問者">
-            <p class="a_text"><span class="a_logo">A:</span>HTML , CSS ,JavaScript(jQuery)を使って作成しました</p>
+            <p class="a_text"><span class="a_logo">A:</span>HTML , CSS ,JavaScriptを使って作成しました</p>
           </div>
         </div>
   
@@ -148,12 +148,12 @@
   
         <div class="q_and_a" id="todo_episode">
           <div class="q_wrap">
-            <p class="q_text"><span class="q_logo">Q:</span>制作にあたって意識したこと(制作時のエピソードなど)</p>
+            <p class="q_text"><span class="q_logo">Q:</span>制作について</p>
             <img src="img/user.png" class="user_img" alt="質問者">
           </div>
           <div class="a_wrap">
             <img src="img/my_icon.webp" class="user_img" alt="質問者">
-            <p class="a_text"><span class="a_logo">A:</span>HTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しました</p>
+            <p class="a_text"><span class="a_logo">A:</span>他にJavaScriptでのアウトプットを何かできないかと思い、DOM操作を使ったtodoアプリを作成することにしました。</p>
           </div>
         </div>
   
@@ -164,7 +164,7 @@
           </div>
           <div class="a_wrap">
             <img src="img/my_icon.webp" class="user_img" alt="質問者">
-            <p class="a_text"><span class="a_logo">A:</span>HTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しました</p>
+            <p class="a_text"><span class="a_logo">A:</span>userが入力した文字を取得し、追加、完了、削除などDOM操作の基本を使っている単純なものなので、次は実用性のある物を作りたいです。</p>
           </div>
         </div>
       </section>
