--- a/introduction/introduction.html
+++ b/introduction/introduction.html
@@ -47,8 +47,8 @@
         <ul class="question_list">
           <li class="question"><a href="#bono_language">どんな言語を使用したの？</a></li>
           <li class="question"><a href="#bono_period">制作期間はどれくらいかかったの？</a></li>
-          <li class="question"><a href="#bono_episode">制作にあたって意識したこと(制作時のエピソードなど)</a></li>
-          <li class="question"><a href="#bono_technology">作品に使用した技術について</a></li>
+          <li class="question"><a href="#bono_episode">作品について</a></li>
+          <li class="question"><a href="#bono_technology">制作時のエピソード</a></li>
         </ul>
       </section>
   
@@ -79,23 +79,23 @@
   
         <div class="q_and_a" id="bono_episode">
           <div class="q_wrap">
-            <p class="q_text"><span class="q_logo">Q:</span>制作にあたって意識したこと(制作時のエピソードなど)</p>
+            <p class="q_text"><span class="q_logo">Q:</span>作品について</p>
             <img src="img/user.png" class="user_img" alt="質問者">
           </div>
           <div class="a_wrap">
             <img src="img/my_icon.webp" class="user_img" alt="質問者">
-            <p class="a_text"><span class="a_logo">A:</span>サイトの雰囲気がある程度決まり、さぁ制作開始、HTML,CSSで静的サイトまではスムーズにできたのですが、レスポンシブ対応や、jsは勉強を始めたばかりだったので調べて試してみてを繰り返し実装していきました。インプットでの知識を追うとアウトプットすることでより理解が深まりました。そしてHPに実際に実装できた時はとても嬉しく楽しい気持ちになったのを覚えています。サイトを公開して終わりではなく、決めたキーワードで検索順位を上げるためにSEOについても学習しました、Google search consoleなどのツールやコードを見直したりこの開発を通してインプットだけでは知らなかった知識や、わからないことを調べる力がついたと思います。</p>
+            <p class="a_text"><span class="a_logo">A:</span>デザイン、作成、管理すべて一人で行いました。デザインはなるべくお店の雰囲気似合うように、またターゲットにする客層をオーナーと相談しそこも意識しました。レスポンシブ対応もしておりケータイでの閲覧も可能に、サイト内の色、文字の内容などはお店のオーナーと相談したりしてお店のおしゃれな雰囲気を再現できたと思います。サイトが完成し公開して終わりではなく、オーナーと話合いどういったキーワードで検索順位上位を狙うかを決め、それを実現すべくSEOについても学習しました、Google search consoleやコードを見直したりこの開発を通してインプットだけでは知らなかった知識や、わからないことを調べる力がついたと思います。</p>
           </div>
         </div>
   
         <div class="q_and_a" id="bono_technology">
           <div class="q_wrap">
-            <p class="q_text"><span class="q_logo">Q:</span>作品に使用した技術について</p>
+            <p class="q_text"><span class="q_logo">Q:</span>制作時のエピソード</p>
             <img src="img/user.png" class="user_img" alt="質問者">
           </div>
           <div class="a_wrap">
             <img src="img/my_icon.webp" class="user_img" alt="質問者">
-            <p class="a_text"><span class="a_logo">A:</span>HTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しましたHTML , CSS ,JavaScript(jQuery)を使って作成しました</p>
+            <p class="a_text"><span class="a_logo">A:</span>制作にあたり、お店のオーナーの方と沢山話し合いました。話し合える時間も限られていたため、仕事の終わりや土日の空き時間に足を運んだりしてとても大変でした。<br>そうしてサイトの構成が決まり、制作が始まりました！HTML,CSSで静的サイトまではスムーズにできたのですが、レスポンシブ対応や、jsで動きをつけたりは、js自体勉強を始めたばかりだったので調べて試してみてを繰り返して実装していきました。インプットでの知識をアウトプットすることでより理解が深まりました。完成したサイトをお店の人や実際に利用した人から話を聞く機会があり意見をいただいたり、評価してもらったりと制作のモチベーションにつながりました。<br>転職のために始めたことですがこの一連の制作を通して、純粋に何かを作ることの大変さ、それを実現する技術力、どんどん形になっていく楽しさはジャンルは違えど現在の職業とも重なるところが多く、さらにプログラミングが好きになりました。</p>
           </div>
         </div>
       </section>
