history_item(転職に向けて勉強を始める)誤記訂正

--- a/history/history.html
+++ b/history/history.html
@@ -70,7 +70,7 @@
 
       <div class="history_item">
         <h2 class="h_title">転職に向けての勉強を始める</h2>
-        <p class="h_text">転職するにあたって、「実戦で使用されるスキル」について調べたりして転職に向けて本格的に勉強を始めました。GIT,GitHubについて勉強し、実際の制作物をGitHubにあげていくようにした。それに加え実際に作る制作物に必要な知識も勉強していき一気に勉強量が上がり形になっていくのが楽しく思えました。</p>
+        <p class="h_text">転職するにあたって、「実戦で使用されるスキル」について調べたりして転職に向けて本格的に勉強を始めました。GIT,GitHubについて勉強し、実際の制作物をGitHubにあげていくようにしました。それに加え実際に作る制作物に必要な知識も勉強していき一気に勉強量が上がり形になっていくのが楽しく思えました。</p>
       </div>
 
     </div>
