ホームページを作ることになった経緯を追加

--- a/introduction/introduction.html
+++ b/introduction/introduction.html
@@ -31,6 +31,7 @@
       </ul>
     </nav>
   </header>
+
   <main>
     <!-- bono hairホームページ -->
     <div id="bono_introduction">
@@ -47,6 +48,7 @@
         <ul class="question_list">
           <li class="question"><a href="#bono_language">どんな言語を使用したの？</a></li>
           <li class="question"><a href="#bono_period">制作期間はどれくらいかかったの？</a></li>
+          <li class="question"><a href="#bono_create">ホームページを作ることになった経緯</a></li>
           <li class="question"><a href="#bono_episode">作品について</a></li>
           <li class="question"><a href="#bono_technology">制作時のエピソード</a></li>
         </ul>
@@ -74,6 +76,17 @@
           <div class="a_wrap">
             <img src="img/my_icon.webp" class="user_img" alt="質問者">
             <p class="a_text"><span class="a_logo">A:</span>6ヶ月</p>
+          </div>
+        </div>
+
+        <div class="q_and_a" id="bono_create">
+          <div class="q_wrap">
+            <p class="q_text"><span class="q_logo">Q:</span>ホームページを作ることになった経緯</p>
+            <img src="img/user.png" class="user_img" alt="質問者">
+          </div>
+          <div class="a_wrap">
+            <img src="img/my_icon.webp" class="user_img" alt="質問者">
+            <p class="a_text"><span class="a_logo">A:</span>転職を目指し何か作ろうと考えていました。そこで、実際にお客様から仕事をもらうことで個人での開発では得られないものがあるのではないか。また、自分のなかでプログラミングは趣味なのか本当に仕事にしたいことなのか自分自身の気持ちを確かめるきっかけを作るためでもありました。そうして地元のお店に電話をしたり直接話に行ってホームページを作らせてほしいとお願いに回りました。そこで、噂で私の話を聞いたBONO hairのオーナーが声をかけてくださり制作することになりました。</p>
           </div>
         </div>
   
@@ -169,6 +182,9 @@
         </div>
       </section>
     </div>
+
+  <!-- 今取り組んでいること -->
+  
   </main>
 <script src="../js/main.js"></script>
 </body>
