--- a/history/history.html
+++ b/history/history.html
@@ -16,9 +16,9 @@
         <i class="fas fa-times" id="haid_btn"></i>
         <li><a class="menu_item" href="../index.html#introduction">自己紹介</a></li>
         <li><a class="menu_item" href="../index.html#pg_myself">スキルセット</a></li>
-        <li><a class="menu_item" href="../index.html#introduction">作品紹介</a></li>
-        <li><a class="menu_item" href="#bono_introduction">BONO hair</a></li>
-        <li><a class="menu_item" href="#todo_introduction">todoリスト</a></li>
+        <li><a class="menu_item" href="../index.html#performance">作品紹介</a></li>
+        <li><a class="menu_item" href="#todo_introduction">今取り組んでいること</a></li>
+        <li><a class="menu_item" href="#bono_introduction">ざっくり学習の歴史</a></li>
       </ul>
 
       <i class="fas fa-bars" id="open_btn"></i>
@@ -26,14 +26,19 @@
         <li><a href="../index.html#introduction">自己紹介</a></li>
         <li><a href="../index.html#pg_myself">スキルセット</a></li>
         <li><a href="../index.html#performance">作品紹介</a></li>
-        <li><a href="#bono_introduction">ざっくり履歴</a></li>
         <li><a href="#todo_introduction">今取り組んでいること</a></li>
+        <li><a href="#bono_introduction">ざっくり学習の歴史</a></li>
       </ul>
     </nav>
   </header>
 
+  <section class="effort">
+    <h1 class="main_title">今取り組んでいること</h1>
+
+  </section>
+
   <section class="history">
-    <h1 class="history_title">ざっくり歴史紹介</h1>
+    <h1 class="main_title">ざっくり学習の歴史紹介</h1>
     <div class="history_item_wrap">
 
       <div class="history_item">
